# coding-agent

./: DESIGN.md  README.md  agent.py  pyproject.toml
hermit/: __main__.py  agent.py  cli.py  config.py  memory.py  ollama_client.py  prompts.py  session.py
hermit/tools/: __init__.py  filesystem.py  shell.py  web.py
tests/: smoke_ollama.py  test_agent.py  test_prompts.py  test_session.py  test_tools_filesystem.py  test_tools_web.py  test_trim.py
workspace/: MEMORY.md
