[project]
name = "hermit"
version = "0.1.0"
description = "An autonomous, privacy-first local personal agent powered by Ollama and Gemma"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
hermit = "hermit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
